--- a/app/views/songs/index.erb
+++ b/app/views/songs/index.erb
@@ -1,4 +1,4 @@
-<h1>Index Page</h1>
+<h1>Songs Index Page</h1>
 <ul>
   <% @songs.each do |song| %>
     <li>Name: <a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
