--- a/app/views/genres/index.erb
+++ b/app/views/genres/index.erb
@@ -1,6 +1,6 @@
 <h1>Genres Index Page</h1>
 <ul>
-  <% @songs.each do |song| %>
-    <li>Name: <a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
+  <% @genres.each do |genre| %>
+    <li>Name: <a href="/genres/<%= genre.slug %>"><%= genre.name %></a></li>
   <% end %>
 </ul>
