--- a/app/views/artists/index.erb
+++ b/app/views/artists/index.erb
@@ -1,6 +1,6 @@
 <h1>Artists Index Page</h1>
 <ul>
-  <% @songs.each do |song| %>
-    <li>Name: <a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
+  <% @artists.each do |artist| %>
+    <li>Name: <a href="/artists/<%= artist.slug %>"><%= artist.name %></a></li>
   <% end %>
 </ul>
