automatically backed up by learn

--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,3 +1,5 @@
 <h1><%= @song.name %></h1>
 
-<h3>Artist Name: <%= @song.artist.name %></h3>
+<h3>Artist: <%= @song.artist.name %></h3>
+
+<h3>Genre:</h3>
