--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,8 +1,7 @@
 <h1><%= @song.name %></h1>
 
 <h3>Artist: <%= @song.artist.name %></h3>
-<%pry
-%>
+<%binding.pry%>
 <h3>Genres:</h3>
 <ul>
   <% @song.genres.each do |song| %>
