--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -4,5 +4,6 @@
 
 <h3>Genres:</h3>
 <ul>
-  <% @song.genres.each do |song| %>
+  <% @song.genres.each do |genre| %>
+  <li><%= genre.name %></li>
 </ul>
