--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -1,1 +1,10 @@
+<h1><%= @genre.name %></h1>
 
+<h3>Artists: <%= @song.artist.name %></h3>
+
+<h3>Songs:</h3>
+<ul>
+  <% @genre.songs.each do |song| %>
+    <li><%= song.name %></li>
+  <% end %>
+</ul>
