automatically backed up by learn

--- a/app/views/artists/show.erb
+++ b/app/views/artists/show.erb
@@ -8,7 +8,7 @@
 </ul>
 <h3>Genres:</h3>
 <ul>
-  <% @song.genres.each do |genre| %>
+  <% @artist.genres.each do |genre| %>
     <li><%= genre.name %></li>
   <% end %>
 </ul>
