--- a/app/views/artists/show.erb
+++ b/app/views/artists/show.erb
@@ -3,6 +3,8 @@
 <h3>Songs:</h3>
 <ul>
   <% @artist.songs.each do |song| %>
+  pry
+  
     <li><a href="songs/<%= song.slug %>"><%= song.name %></a></li>
   <% end %>
 </ul>
