--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -3,12 +3,12 @@
 <h3>Artists:</h3>
 <ul>
   <% @genre.artists.each do |artist| %>
-    <li><a><%= artist.name %></a></li>
+    <li><a href="artists/<%= artist.slug %>"><%= artist.name %></a></li>
   <% end %>
 </ul>
 <h3>Songs:</h3>
 <ul>
   <% @genre.songs.each do |song| %>
-    <li><a><%= song.name %></a></li>
+    <li><a href="genres/<%= genre.slug %>"><%= song.name %></a></li>
   <% end %>
 </ul>
