--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,10 +1,10 @@
 <h1><%= @song.name %></h1>
 <%binding.pry%>
-<h3>Artist: <a href='artists/<%= @song.artist.slug %>'><%= @song.artist.name %></a></h3>
+<h3>Artist: <a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a></h3>
 
 <h3>Genres:</h3>
 <ul>
   <% @song.genres.each do |genre| %>
-    <li><a href="genres/<%= genre.slug %>"><%= genre.name %></a></li>
+    <li><a href="/genres/<%= genre.slug %>"><%= genre.name %></a></li>
   <% end %>
 </ul>
