--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -9,6 +9,6 @@
 <h3>Songs:</h3>
 <ul>
   <% @genre.songs.each do |song| %>
-    <li><a href="/genres/<%= genre.slug %>"><%= song.name %></a></li>
+    <li><a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
   <% end %>
 </ul>
