automatically backed up by learn

--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,5 +1,5 @@
 <h1>Create New Song</h1>
 
-<form method="POST" action="/songs/show">
-
+<form method="POST" action="/songs">
+  <input type="text" name="name"/>
 </form>
