--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -2,5 +2,5 @@
 
 <form method="POST" action="/songs">
   <input type="text" name="name"/>
-  <input type="submit" />
+  <input type="submit" value="Submit"/>
 </form>
