automatically backed up by learn

--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,6 +1,6 @@
 <h1>Create New Song</h1>
 
 <form method="POST" action="/songs">
-  <input type="text" name="name"/>
+  <input type="text" name="name" value="Name"/>
   <input type="submit" value="Submit"/>
 </form>
