--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,5 +1,5 @@
 <h1>Create New Song</h1>
-
+<%binding.pry%>
 <form method="POST" action="/songs">
   <input type="text" id="Name" name="Name" value="Name"/>
   <input type="submit" value="Submit"/>
