--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,5 +1,10 @@
 <h1>Create New Song</h1>
 <form method="POST" action="/songs">
   <input type="text" id="Name" name="Name" value="Name"/>
+  <input type="checkbox"
+<%pry%>
+  <%@genres.each do |owner|%>
+    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
+  <%end%>
   <input type="submit" value="Submit"/>
 </form>
