--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -3,8 +3,8 @@
   <input type="text" id="Name" name="Name" value="Name"/>
   <input type="checkbox" />
 <%pry%>
-  <%@genres.each do |owner|%>
-    <input type="checkbox" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>"><%=owner.name%></input>
+  <%@genres.each do |genre|%>
+    <input type="checkbox" name="genre" value="<%=genre.id%>" id="<%=genre.id%>"><%=owner.name%></input>
   <%end%>
   <input type="submit" value="Submit"/>
 </form>
