--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -3,6 +3,7 @@
   <input type="text" id="Name" name="Name" value="Name"/>
 
   <%@genres.each do |genre|%>
+  <%binding.pry%>
     <input type="checkbox" name="genre_name" value="<%=genre.id%>" id="<%=genre.id%>"><%=genre.name%></input>
   <%end%>
   
