--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,6 +1,6 @@
 <h1>Create New Song</h1>
 <form method="POST" action="/songs">
-  <input type="text" id="Name" name="Name" value="Name"/>
+  <input type="text" id="Name" name="Name" />
 
   <%@genres.each do |genre|%>
   <%binding.pry%>
