--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -1,6 +1,6 @@
 <h1>Create New Song</h1>
 <form method="POST" action="/songs">
-  <input type="text" id="Name" name="Name" />
+  <input type="text" id="Name" name="name" />
 
   <%@genres.each do |genre|%>
     <input type="checkbox" name="genre_name" value="<%=genre.id%>" id="<%=genre.id%>"><%=genre.name%></input>
