automatically backed up by learn

--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -6,7 +6,7 @@
     <input type="checkbox" name="genres[]"  id="<%=genre.name%>"><%=genre.name%></input>
   <%end%>
 
-  <input type="text" id="Artist Name" name="artist_name"
+  <input type="text" id="Artist Name" name="artist_name" />
 
   <input type="submit" value="Submit"/>
 </form>
