--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -8,5 +8,5 @@
 
   <input type="text" id="Artist Name" name="artist_name" />
 
-  <input type="submit" value="Submit"/>
+  <input type="submit" value="Create"/>
 </form>
