automatically backed up by learn

--- a/app/views/songs/new.erb
+++ b/app/views/songs/new.erb
@@ -3,7 +3,7 @@
   <input type="text" id="Name" name="name" />
 
   <%@genres.each do |genre|%>
-    <input type="checkbox" name="genres[]"  id="<%=genre.name%>" value="genre.name"><%=genre.name%></input>
+    <input type="checkbox" name="genres[]"  id="<%=genre.name%>" value="genre"><%=genre.name%></input>
   <%end%>
 
   <input type="text" id="Artist Name" name="artist_name" />
