--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,4 +1,6 @@
-<h1><%= @song.name %></h1>
+<h1>Successfully created song.</h1>
+
+<h2><%= @song.name %></h2>
 
 <h3>Artist: <a href="/artists/<%= @song.artist.slug %>"><%= @song.artist.name %></a></h3>
 
