--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -5,7 +5,7 @@
 
   <br></br>
 
-  <input type="text" name="pet[name]" id="pet_name" name="<%=@pet.name%>">
+  <input type="text" name="song[name]" id="song_name" name="<%=@song.name%>">
 
   <br></br>
 
