--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -10,7 +10,7 @@
   <br></br>
 
   <label>Update the artist:</label>
-  <label>Name:</label>
+  <label>Artist Name:</label>
   <br></br>
   <input type="text" name="owner[name]" id="owner_name"></input>
   <br></br>
