--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -14,5 +14,5 @@
   <br></br>
   <input type="text" name="owner[name]" id="Artist Name"></input>
   <br></br>
-  <input type="submit" value="Update Pet">
+  <input type="submit" value="Update Song">
 </form>
