--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -12,7 +12,7 @@
   <label>Update the artist:</label>
   <label>Artist Name:</label>
   <br></br>
-  <input type="text" name="owner[name]" id="Artist Name"></input>
+  <input type="text" name="artist_name" id="Artist Name"></input>
   <br></br>
   <input type="submit" value="Update Song">
 </form>
