automatically backed up by learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -5,7 +5,7 @@
 
   <br></br>
 
-  <input type="text" name="song[name]" id="song_name" name="<%=@song.name%>">
+  <input type="text" id="Name" name="name" />
 
   <br></br>
 
