--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,6 +1,6 @@
 <h1>Update a Song</h1>
 
-<form action="/songs" method="POST">
+<form action="/songs/<%= @song.slug %>" method="POST">
   <label>Name:</label>
 
   <br></br>
