--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,4 +1,6 @@
-<h1>Successfully created song.</h1>
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %>
 
 <h2><%= @song.name %></h2>
 
