automatically backed up by learn

--- a/app/views/songs/show.erb
+++ b/app/views/songs/show.erb
@@ -1,6 +1,6 @@
 <%binding.pry%>
 <% if flash.has?(:message) %>
-  <%= flash[:message] %>
+  <h1><%= flash[:message] %></h1>
 <% end %>
 
 <h2><%= @song.name %></h2>
