--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -1,6 +1,7 @@
 <h1>Update a Song</h1>
 <%binding.pry%>
 <form action="/songs/<%= @song.slug %>" method="POST">
+  <input type="hidden" name="_method" value="PATCH">
   <label>Name:</label>
 
   <br></br>
