automatically backed up by learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -15,5 +15,10 @@
   <br></br>
   <input type="text" name="artist_name" id="Artist Name"></input>
   <br></br>
+
+  <%@genres.each do |genre|%>
+    <input type="checkbox" name="genres[]"  id="<%=genre.name%>" value="<%= genre.id %>"><%=genre.name%></input>
+  <%end%>
+
   <input type="submit" value="Save">
 </form>
