automatically backed up by learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -13,7 +13,7 @@
   <label>Update the artist:</label>
   <label>Artist Name:</label>
   <br></br>
-  <input type="text" name="artist_name" id="Artist Name"></input>
+  <input type="text" name="artist_name" id="Artist Name" value="<%= @song.artist %>"></input>
   <br></br>
 
   <%@genres.each do |genre|%>
