automatically backed up by learn

--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -9,7 +9,7 @@
   <input type="text" id="Name" name="name" />
 
   <br></br>
-
+  <%binding.pry%>
   <label>Update the artist:</label>
   <label>Artist Name:</label>
   <br></br>
