--- a/app/views/songs/edit.erb
+++ b/app/views/songs/edit.erb
@@ -9,11 +9,11 @@
   <input type="text" id="Name" name="name" />
 
   <br></br>
-  
+
   <label>Update the artist:</label>
   <label>Artist Name:</label>
   <br></br>
-  <input type="text" name="artist_name" id="Artist Name" value="<%= @song.artist %>"></input>
+  <input type="text" name="artist_name" id="Artist Name" value="<%= @song.artist.name %>"></input>
   <br></br>
 
   <%@genres.each do |genre|%>
